# Kardio-Twin

./: .dockerignore  .env.example  .gitignore  AI_ENGINE_PRD.md  API_DOCUMENTATION.md  Dockerfile  FRONTEND_PRD.md  HARDWARE_PRD.md  PRD.md  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_groq_real.py
.do/: app.yaml
ai_engine/: __init__.py  anomaly.py  api.py  baseline.py  engine.py  fastapi_app.py  nudges.py  projection.py  requirements.txt  scoring.py  validation.py  zones.py
ai_engine/tests/: __init__.py  test_anomaly.py  test_baseline.py  test_engine.py  test_integration.py  test_nudges.py  test_projection.py  test_scoring.py  test_validation.py  test_zones.py
cardiotwin_ai_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dtos/: __init__.py  readingsDto.py  sessionDto.py
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: HealthAvatar.tsx
frontend/src/components/dashboard/: HistoryChart.tsx  NudgePanel.tsx  ProjectionPanel.tsx  Sidebar.tsx
frontend/src/components/layout/: Footer.tsx  Navbar.tsx
frontend/src/hooks/: useSensorSimulator.ts
frontend/src/i18n/: LanguageContext.tsx
frontend/src/i18n/translations/: en.ts  ha.ts  ig.ts  yo.ts
frontend/src/pages/: DashboardPage.tsx  DemoPage.tsx  LandingPage.tsx
frontend/src/services/: api.ts
model/: __init__.py  dataModel.py
repository/: database.py
routers/: __init__.py  readingRouter.py  sessionRouter.py
service/: __init__.py  readingService.py  sessionService.py
